get - add match result
